# libpqcap

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  convert_pcapng.c  extract_metadata.c  run_examples.sh  scan_packets.c
include/: pqcap.h
scripts/: generate_fixtures.sh
src/: pqcap_embed.c  pqcap_error.c  pqcap_extract.c  pqcap_footer.c  pqcap_internal.h  pqcap_io.c  pqcap_scan.c  pqcap_util.c
tests/: integration_pqcap_validate.sh  pcapng_to_pqcap_convert.sh  pcapng_tshark_compat.sh  pqcap_convert_cli.c  pqcap_embed_cli.c  test_embed_roundtrip.c  test_fixture_embed.c  test_footer.c  test_parquet_flexibility.c  test_pcapng_scan_fixture.c  test_scan.c
tests/fixtures/: README.md  http.pcapng  http_metadata.parquet  large_metadata.parquet  minimal_capture.pcapng  minimal_metadata.parquet  udp1.pcapng
tests/lib/: pqcap_file_checks.py  tshark_embed_check.sh
